--- a/gf-ud.cabal
+++ b/gf-ud.cabal
@@ -32,7 +32,7 @@ executable gf-ud
                , UDPatterns
 
   -- other-extensions:
-  build-depends:       base, containers, pretty, gf, process, filepath, split, enummapset
+  build-depends:       base, containers, pretty, gf, process, filepath, split, enummapset, compact >= 0.2.0.0
   -- hs-source-dirs:
   default-language:    Haskell2010
 
@@ -54,7 +54,7 @@ library
     DBNF,
     AutoAnnotations
 
-  build-depends:       base, containers, pretty, gf, process, filepath, split, enummapset
+  build-depends:       base, containers, pretty, gf, process, filepath, split, enummapset, compact >= 0.2.0.0
   default-language:    Haskell2010
 
 test-suite gfud-testsuite
