Performance: Reduce GC time by increasing minimum heap size
Since the first thing we do is to read in a PGF file which takes ~200MB
in memory, we can reduce the time spent on GC significantly by
telling GHC to not perform major GC until after all that is done

When testing on a long conllu file, this improves productivity from ~37%
to ~97%

--- a/gf-ud.cabal
+++ b/gf-ud.cabal
@@ -35,6 +35,7 @@ executable gf-ud
   build-depends:       base, containers, pretty, gf, process, filepath, split, enummapset, compact >= 0.2.0.0
   -- hs-source-dirs:
   default-language:    Haskell2010
+  ghc-options: -rtsopts -with-rtsopts=-H500M
 
 library
   exposed-modules:
